# KursachLao-WebServerExmpl

./: CMakeLists.txt  KursachLao-ServerSide.slnx  README.md
KursachLao-ServerSide/: ApiProcessor.cpp  BaseModule.h  CMakeLists.txt  FileCache.cpp  FileCache.h  KursachLao-ServerSide.cpp  KursachLao-ServerSide.vcxproj  KursachLao-ServerSide.vcxproj.filters  ModuleRegistry.h  RequestHandler.cpp  RequestHandler.h  ServerModule.cpp  ServerModule.h  Session.h  SessionHandler.cpp  SessionHandler.h
static/: attention.html  employees.html  errorNotFound.html  hours.html  index.html  salary.html
static/components/: footer.js  navbar.js
static/modules/: dataCache.js  notifications.js
